--- a/random.css
+++ b/random.css
@@ -15,6 +15,15 @@
     background-color: lightgray;
 }
 
+.button{
+    font-weight: 500;
+    border: 4px solid black;
+    width: 300px;
+    height: 70px;
+    font-size: 22px;
+    border-radius: 4px;
+}
+
 body {
     justify-content: center; /* Центрируем по горизонтали */
     align-items: center; /* Центрируем по вертикали */
@@ -23,8 +32,12 @@ body {
 }
 
 .image-container {
+    display: flex;
+    justify-content: center; /* Центрируем элементы по горизонтали */
+    align-items: center; /* Центрируем элементы по вертикали */
     text-align: center; /* Центрируем текст внутри контейнера (если нужно) */
 }
+
 
 .responsive-image {
     max-width: 100%; /* Максимальная ширина 100% от родительского элемента */
@@ -33,15 +46,16 @@ body {
 
 .custom-heading {
     font-weight: bold;
-    font-size: 110px; /* Устанавливаем размер шрифта */
+    font-size: 210px; /* Устанавливаем размер шрифта */
     color: #333; /* Цвет текста */
     text-align: center; /* Центрируем текст */
-    margin: 35px; /* Убираем отступы */
+    margin: 15px; /* Убираем отступы */
 }
 
 .ppp{
-  font-size: 20px;
+  font-size: 30px;
 }
+
 
 .flex{
   display: flex;
@@ -58,7 +72,7 @@ body {
   color: #333;
   padding: 10px 5px;
   text-align: center;
-  font-family: 'MYRIADPRO-COND';
+  font-family: 'MYRIADPRO-REGULAR';
   font-size: 25px;
 }
 
